--- a/haskell/Haskelled/package.yaml
+++ b/haskell/Haskelled/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/Gith
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- text
 
 library:
   source-dirs: src
